# lightning-censorship-simulator

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  coverage.yml  lint.yml
src/: lib.rs
src/net/: asn.rs  db_reader.rs  mod.rs
src/sim/: builder.rs  censor.rs  mod.rs  output.rs  runner.rs
test_data/: lnbook_example_lnr.json  trivial_connected_lnd.json  trivial_connected_lnr.json
