[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-parser = { path = "../../lightning-mpp-impact/lightning-simulator/network-parser"}
lightning-simulator = { path = "../../lightning-mpp-impact/lightning-simulator/simulator"}
#network-parser = { git = "https://github.com/cndolo/lightning-simulator", tag ="v0.2.0"}
#lightning-simulator = { git = "https://github.com/cndolo/lightning-simulator", tag = "v0.2.0"}
clap = { version = "4.0.22"}
env_logger = "0.10.1"
log = "0.4.20"
maxminddb = "0.24.0"

[[bin]]
name = "simulator"
path = "src/bin/main.rs"
