[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#network-parser = { path = "../../lightning-mpp-impact/lightning-simulator/network-parser"}
#lightning-simulator = { path = "../../lightning-mpp-impact/lightning-simulator/simulator"}
network-parser = { git = "https://github.com/cndolo/lightning-simulator"}
lightning-simulator = { git = "https://github.com/cndolo/lightning-simulator"}
clap = { version = "4.0.22"}
env_logger = "0.10.1"
log = "0.4.20"
maxminddb = "0.24.0"
rayon = "1.8.1"
serde = "1.0.195"
serde_json = "1.0.111"

[[bin]]
name = "simulator"
path = "src/bin/main.rs"
