[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
default-run = "simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-parser = { git = "https://github.com/p2p-research-tools/lightning-mpp-simulator"}
lightning-simulator = { git = "https://github.com/p2p-research-tools/lightning-mpp-simulator"}
clap = { version = "4.0.22"}
env_logger = "0.11.5"
log = "0.4.20"
maxminddb = "0.24.0"
rayon = "1.8.1"
serde = "1.0.195"
serde_json = "1.0.111"
csv = "1.3.0"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "simulator"
path = "src/bin/main.rs"

[[bin]]
name = "as_node_degree"
path = "src/bin/as_node_degree.rs"

[[bin]]
name = "intra_channels"
path = "src/bin/intra_channels.rs"
